Broken text rendering when input field has selection. https://bugs.webkit.org/show_bug.cgi?id=122716

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-14
Reviewed by Antti Koivisto.

Source/WebCore:

Tests: fast/text/text-rendering-with-input-selection.html.
       fast/text/text-rendering-with-input-selection-expected.html.

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint): Check that text has selection.

LayoutTests:

* fast/text/text-rendering-with-input-selection.html: Added.
* fast/text/text-rendering-with-input-selection-expected.html: Added.

Canonical link: https://commits.webkit.org/140861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157392 268f45cc-cd09-0410-ab3c-d52691b4dbfc